# NuvioTV

./: .gitignore  ISSUE_ANALYSIS.md  MODERN_HOME_PERFORMANCE_REPORT.md  STREMIO_COMPARISON.md  build.gradle.kts  compose_stability_config.conf  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.jules/: bolt.md
app/: build.gradle.kts  proguard-rules.pro
app/libs/: lib-datasource-release.aar  lib-exoplayer-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/proto/: watch_progress.proto
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: Strings.xml
app/src/main/res/values-b+es+419/: strings.xml
app/src/main/res/values-bs/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hu/: string.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-pt-rPT/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-sl/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/xml/: locale_config.xml
ffmpeg-decoder-downmix/src/main/jni/: ffmpeg_jni.cc
gradle/: libs.versions.toml
libraries/exoplayer/: build.gradle
libraries/exoplayer/src/main/jni/: CMakeLists.txt
scripts/: release_beta_iframe.py
(+253 files in other folders)
